View Issue Details

IDProjectCategoryView StatusLast Update
0030384CommunityOCCT:Visualizationpublic2019-03-05 13:46
ReporterVico Liang Assigned Toapn  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version7.4.0 
Target Version7.4.0Fixed in Version7.4.0 
Summary0030384: Visualization - Won't display line with dot and dash style on Android
DescriptionI got the master branch code and build it for Android. The line with style Aspect_TOL_DASH and Aspect_TOL_DOT won't be displayed. These feature works well in previous version 7.3. so it think there must be bug introduced in new version.
TagsNo tags attached.
Test case numberNot needed

Attached Files

  • Screenshot (Feb 21, 2019 00_38_04).png (152,765 bytes)

Relationships

child of 0030119 closedapn Open CASCADE Visualization, OpenGl_ShaderManager - implement mechanism generating in/out section of shader programs 

Activities

kgv

2018-11-26 17:56

developer   ~0081266

Please provide a detailed log from OCCT (Message::DefaultMessenger() interface, redirected to std::cout by default) where errors/warnings can be generated by TKOpenGl driver.

And please provide exact information about tested device (V3d_View::DiagnosticInformation(), see also vglinfo Draw Harness command).

Vico Liang

2018-11-27 15:33

developer   ~0081270

V3d_View::DiagnosticInformation()

EGLVersion : 1.4 Android META-EGL
EGLVendor : Android
EGLClientAPIs : OpenGL_ES
EGLExtensions : EGL_KHR_get_all_proc_addresses EGL_ANDROID_presentation_time EGL_KHR_swap_buffers_with_damage EGL_ANDROID_get_native_client_buffer EGL_ANDROID_front_buffer_auto_refresh EGL_ANDROID_get_frame_timestamps EGL_KHR_image EGL_KHR_image_base EGL_KHR_gl_colorspace EGL_KHR_gl_texture_2D_image EGL_KHR_gl_texture_cubemap_image EGL_KHR_gl_renderbuffer_image EGL_KHR_fence_sync EGL_KHR_create_context EGL_KHR_config_attribs EGL_KHR_surfaceless_context EGL_EXT_create_context_robustness EGL_ANDROID_image_native_buffer EGL_KHR_wait_sync EGL_ANDROID_recordable EGL_KHR_partial_update EGL_KHR_mutable_render_buffer EGL_EXT_protected_content EGL_IMG_context_priority
GLvendor : ARM
GLdevice : Mali-T830
OpenGL ES 3.2 v1.r20p0-01rel0.9a7fca3f7dd712a473937294a8ae24b1
GLSLversion : OpenGL ES GLSL ES 3.20
GLdebug : ON
Max texture size : 8192
Max FBO dump size : 8192x8192
Max combined texture units : 96
Max MSAA samples : 4
Viewport : 2160x1080
GLextensions : GL_EXT_debug_marker GL_ARM_rgba8 GL_ARM_mali_shader_binary GL_OES_depth24 GL_OES_depth_texture GL_OES_depth_texture_cube_map GL_OES_packed_depth_stencil GL_OES_rgb8_rgba8 GL_EXT_read_format_bgra GL_OES_compressed_paletted_texture GL_OES_compressed_ETC1_RGB8_texture GL_OES_standard_derivatives GL_OES_EGL_image GL_OES_EGL_image_external GL_OES_EGL_image_external_essl3 GL_OES_EGL_sync GL_OES_texture_npot GL_OES_vertex_half_float GL_OES_required_internalformat GL_OES_vertex_array_object GL_OES_mapbuffer GL_EXT_texture_format_BGRA8888 GL_EXT_texture_rg GL_EXT_texture_type_2_10_10_10_REV GL_OES_fbo_render_mipmap GL_OES_element_index_uint GL_EXT_shadow_samplers GL_OES_texture_compression_astc GL_KHR_texture_compression_astc_ldr GL_KHR_texture_compression_astc_hdr GL_KHR_texture_compression_astc_sliced_3d GL_KHR_debug GL_EXT_occlusion_query_boolean GL_EXT_disjoint_timer_query GL_EXT_blend_minmax GL_EXT_discard_
ResolutionRatio : 1

Vico Liang

2018-11-27 16:17

developer   ~0081271

No other error/warning message from TKOpenGl driver.
While Style Aspect_TOL_SOLID works well.

kgv

2019-02-21 00:24

developer   ~0082247

      EGLVersion: 1.4 Android META-EGL
      GLvendor: Qualcomm
      GLdevice: Adreno (TM) 308
      GLversion: OpenGL ES 3.0 V@145.0 AU@  (GIT@Iaf618d42e3) [GLSL: OpenGL ES GLSL ES 3.00]
      264: 
      265: uniform int   uPattern;;
      266: uniform float uFactor;;
      267: THE_SHADER_IN vec2 ScreenSpaceCoord;
      268: vec4 getColor(void) { return occColor; }
      269: #define getFinalColor getColor
      270: void main()
      271: {
      272:   float anAngle      = atan (dFdx (ScreenSpaceCoord.x), dFdy (ScreenSpaceCoord.y));
      273:   float aRotatePoint = gl_FragCoord.x * sin (anAngle) + gl_FragCoord.y * cos (anAngle);
      274:   uint  aBit         = uint (floor (aRotatePoint / uFactor + 0.5)) & 15U;
      275:   if ((uint (uPattern) & (1U << aBit)) == 0U) discard;
      276:   vec4 aColor = getFinalColor();
      277:   if (aColor.a <= 0.1) discard;
      278:   occSetFragColor (aColor);
      279: }
00:08 TKOpenGl | Type: Error | ID: 0 | Severity: High | Message:
        Failed to compile shader object. Compilation log:
      Fragment shader compilation failed.
      ERROR: 0:265: ';' : Syntax error:  syntax error
      ERROR: 1 compilation errors.  No code generated.

Such a nonsense from driver!
Interesting if it is a driver bug or GLSL specs indeed do not allow empty ;...

git

2019-02-21 00:28

administrator   ~0082248

Branch CR30384 has been created by kgv.

SHA-1: 4cc7b591a247273d510b601fde08eb6d7767e6d3


Detailed log of new commits:

Author: kgv
Date: Thu Feb 21 00:23:19 2019 +0300

    0030384: Visualization, OpenGl_ShaderManager - Won't display line with dot and dash style on Android
    
    Fix misprint leading to double semicolon in GLSL code.

kgv

2019-02-21 00:45

developer  

Screenshot (Feb 21, 2019 00_38_04).png (152,765 bytes)

kgv

2019-02-21 00:46

developer   ~0082249

Patch fixes issue on Adreno - please check on your Mali device, if possible.

kgv

2019-02-21 10:21

developer   ~0082252

Last edited: 2019-02-21 10:23

Tested on Mali-T720 - there was the same error.

Check your Message::DefaultMessenger() configuration within application (you need registering your printer to see messages within application interface or to redirect them into system log through __android_log_write(), since std::cout is difficult to see on Android) - OCCT sends errors there, and it is difficult analyzing problem without this log.

See samples/java/jniviewer/jni/OcctJni_MsgPrinter as example.

kgv

2019-02-21 10:21

developer   ~0082253

Please raise the patch.

http://jenkins-test-12.nnov.opencascade.com:8080/view/CR30384-master-KGV/

apn

2019-02-21 16:58

administrator   ~0082275

Combination -
OCCT branch : CR30384
master SHA - 4cc7b591a247273d510b601fde08eb6d7767e6d3
d67d4b811012eef8913d3c535c29654d0acf3c4c
Products branch : master SHA - 893ac6f5b7eaca7244705ef89b1e3702359266b8
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 16525.93000000006 / 16569.010000000086 [-0.26%]
Products
Total CPU difference: 9077.360000000022 / 9069.120000000014 [+0.09%]
Windows-64-VC14:
OCCT
Total CPU difference: 18031.921875 / 17934.9375 [+0.54%]
Products
Total CPU difference: 10474.109375 / 10478.703125 [-0.04%]

Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2019-03-05 13:46

administrator   ~0082627

Branch CR30384 has been deleted by kgv.

SHA-1: 4cc7b591a247273d510b601fde08eb6d7767e6d3

Related Changesets

occt: master ea298f59

2019-02-20 21:23:19

kgv


Committer: apn Details Diff
0030384: Visualization - Won't display line with dot and dash style on Android

Fix misprint leading to double semicolon in GLSL code.
Affected Issues
0030384
mod - src/OpenGl/OpenGl_ShaderManager.cxx Diff File

Issue History

Date Modified Username Field Change
2018-11-26 16:46 Vico Liang New Issue
2018-11-26 16:46 Vico Liang Assigned To => kgv
2018-11-26 17:56 kgv Note Added: 0081266
2018-11-26 17:56 kgv Assigned To kgv => Vico Liang
2018-11-26 17:56 kgv Status new => feedback
2018-11-27 15:33 Vico Liang Note Added: 0081270
2018-11-27 15:34 Vico Liang Assigned To Vico Liang =>
2018-11-27 15:34 Vico Liang Assigned To => kgv
2018-11-27 15:35 Vico Liang Status feedback => assigned
2018-11-27 16:17 Vico Liang Note Added: 0081271
2018-12-08 19:54 kgv Summary Won't display line with dot and dash style => Visualization - Won't display line with dot and dash style on Android
2019-02-21 00:20 kgv Relationship added child of 0030119
2019-02-21 00:20 kgv Product Version => 7.4.0
2019-02-21 00:24 kgv Note Added: 0082247
2019-02-21 00:28 git Note Added: 0082248
2019-02-21 00:45 kgv File Added: Screenshot (Feb 21, 2019 00_38_04).png
2019-02-21 00:46 kgv Note Added: 0082249
2019-02-21 10:21 kgv Note Added: 0082252
2019-02-21 10:21 kgv Note Added: 0082253
2019-02-21 10:21 kgv Assigned To kgv => bugmaster
2019-02-21 10:21 kgv Status assigned => resolved
2019-02-21 10:22 kgv Status resolved => reviewed
2019-02-21 10:23 kgv Note Edited: 0082252
2019-02-21 16:58 apn Test case number => Not needed
2019-02-21 16:58 apn Note Added: 0082275
2019-02-21 16:58 apn Status reviewed => tested
2019-02-23 13:56 apn Changeset attached => occt master ea298f59
2019-02-23 13:56 apn Assigned To bugmaster => apn
2019-02-23 13:56 apn Status tested => verified
2019-02-23 13:56 apn Resolution open => fixed
2019-03-05 13:46 git Note Added: 0082627