0030384: Visualization - Won't display line with dot and dash style on Android

Fix misprint leading to double semicolon in GLSL code.